# zasr

./: CMakeLists.txt  LICENSE  README-deploy.md  README.md  test-speaker-config.yaml  test_microphone_client.py  test_simple_client.py
config/: default.yaml  paraformer-example.yaml  zai.yaml.template
scripts/: check-models.sh  download-models.sh  install.sh  zasrctl
src/: collect-voiceprint.cc  speaker-identifier.cc  speaker-identifier.h  voice-print-db.cc  voice-print-db.h  voice-print-manager.cc  voice-print-manager.h  yaml-config.cc  yaml-config.h  zasr-config.cc  zasr-config.h  zasr-connection.cc  zasr-connection.h  zasr-logger.h  zasr-server-main.cc  zasr-server.cc  zasr-server.h
